<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutmain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/judul"
        android:layout_width="wrap_content"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:text="@string/judul"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subjudul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="28dp"
        android:text="@string/subjudul"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/judul" />

    <Button
        android:id="@+id/tombol1"
        android:layout_width="390dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:onClick="pindah1"
        android:text="@string/tombol1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subjudul" />

    <Button
        android:id="@+id/tombol2"
        android:layout_width="390dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:onClick="pindah2"
        android:text="@string/tombol2"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tombol1" />

    <Button
        android:id="@+id/tombol3"
        android:layout_width="390dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:onClick="pindah3"
        android:text="@string/tombol3"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tombol2" />

    <Button
        android:id="@+id/tombol4"
        android:layout_width="390dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:onClick="pindah4"
        android:text="@string/tombol4"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tombol3" />

    <Button
        android:id="@+id/tombol5"
        android:layout_width="390dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:onClick="pindah5"
        android:text="@string/tombol5"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tombol4" />

</androidx.constraintlayout.widget.ConstraintLayout>